src/tests/ci/assignment_5_functions/invalid_syntax/03_missing_function_brace.c
int main() {
    return 0;
// Missing closing }